# vapidchatter

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/commandus/vapidchatter/: ExampleInstrumentedTest.java  WpnInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  wpn-lib.cpp
app/src/main/java/com/commandus/utilipv6/: Address.java
app/src/main/java/com/commandus/vapidchatter/activity/: AcceptSharedCodeActivity.java  CaptureActivityPortrait.java  DisplayQRCodeActivity.java  DisplayVapidKeyActivity.java  EnterVapidKeyActivity.java  HelpActivity.java  MainActivity.java  Settings.java  SubscriptionsActivity.java  SubscriptionsAdapter.java
app/src/main/java/com/commandus/vapidchatter/service/: NetworkChangeReceiver.java  ReceiverBoot.java  VapidChatterService.java
app/src/main/java/com/commandus/vapidchatter/wpn/: Config.java  Credentials.java  FileHelper.java  Keys.java  Subscription.java  SubscriptionProperties.java  SubscriptionPropertiesList.java  Subscriptions.java  VapidClient.java  wpnAndroid.java
app/src/main/res/layout/: activity_accept_shared_code.xml  activity_display_vapid_key.xml  activity_enter_vapid_key.xml  activity_help.xml  activity_subscriptions.xml  listitem_subscription.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/commandus/vapidchatter/: ExampleUnitTest.java  WpnUnitTest.java
doc/: README.md
gradle/wrapper/: gradle-wrapper.properties
tools/: build-curl.sh  build-openssl.sh  build-zlib.sh  copy-dependencies.sh  install-curl-7.69.1.sh  install-grpc-1.27.sh  install-openssl-1.1.1.sh  start-emulator.sh
